Edited trivia files, along with soundfiles.

--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
                     <h1>Musical Theater Trivia!</h1>
                 </div>
             </div>
-            <div class="button-spacer">
-                <button type="button" class="btn btn-outline-info btn-lg">Start!</button>
-            </div>
 
             <div id="timer-display" class="timer-child"></div>
             <div class="sliding-child">
                 <div id="sliding-object" class="slide-left">o</div>
             </div>
             <div class="spacer"></div>
+
             <div id="questionDiv" class="child"></div>
-            <div class="spacer"></div>
-            <div id="aDiv" class="answer-child"></div>
-            <div id="bDiv" class="answer-child"></div>
-            <div id="cDiv" class="answer-child"></div>
-            <div id="dDiv" class="answer-child"></div>
+            <div class="spacer">
+                <div class="button-spacer">
+                    <button type="button" class="btn btn-outline-info btn-lg">Start!</button>
+                </div>
+            </div>
+            <div id="answer-display">
+                <div id="aDiv" class="answer"></div>
+                <div id="bDiv" class="answer"></div>
+                <div id="cDiv" class="answer"></div>
+                <div id="dDiv" class="answer"></div>
+            </div>
+
         </div>
     </div>
 
