Edited trivia files, along with soundfiles.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 </head>
 
 <body>
+    <audio id="colors">
+        <source src="assets/soundfiles/Colors.mp3" type="audio/mp3">
+    </audio>
+    <audio id="edelweiss">
+        <source src="assets/soundfiles/Edelweiss.mp3" type="audio/mp3">
+    </audio>
+    <audio id="forGood">
+        <source src="assets/soundfiles/ForGood.mp3" type="audio/mp3">
+    </audio>
+    <audio id="seasons">
+        <source src="assets/soundfiles/Seasons.mp3" type="audio/mp3">
+    </audio>
+    <audio id="stars">
+        <source src="assets/soundfiles/Stars.mp3" type="audio/mp3">
+    </audio>
+
     <div class="container parent">
         <div class="row">
             <div class="spacer"></div>
@@ -32,6 +48,7 @@
             <div class="spacer"></div>
 
             <div id="questionDiv" class="child"></div>
+            <div id="giphyDiv" class = "spacer"></div>
             <div class="spacer">
                 <div class="button-spacer">
                     <button type="button" class="btn btn-outline-info btn-lg">Start!</button>
