Edited trivia files, along with soundfiles.

--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
 
             <div id="timer-display" class="timer-child"></div>
             <div class="sliding-child">
-                <div id="sliding-object" class="slide-left">o</div>
+                <div id="sliding-object" class="slide-left"></div>
             </div>
             <div class="spacer"></div>
 
             <div id="questionDiv" class="child"></div>
             <div id="giphyDiv" class = "spacer"></div>
-            <div class="spacer">
+            <div class="spacer flex-stretch">
+                <div id="wins"></div>
                 <div class="button-spacer">
-                    <button type="button" class="btn btn-outline-info btn-lg">Start!</button>
+                    <button type="button" class="btn btn-lg">Start!</button>
                 </div>
+                <div id="losses"></div>
             </div>
             <div id="answer-display">
                 <div id="aDiv" class="answer"></div>
