--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="spacer flex-stretch">
                 <div id="wins"></div>
                 <div class="button-spacer">
-                    <button type="button" class="btn btn-lg">Start!</button>
+                    <!-- <button type="button" class="btn btn-lg">Start!</button> -->
                 </div>
                 <div id="losses"></div>
             </div>
